Cleaning up runtime stuff